# Frahan

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Directory.Build.props  Frahan.StonePack.sln  LICENSE  NOTICE.md  README.md  RELEASE_NOTES_v0.1.0-alpha.md  RELEASE_NOTES_v0.1.1-alpha.md  THIRD_PARTY_NOTICES.md  mkdocs.yml
.github/workflows/: lean-proofs.yml  pages.yml
data/: ATTRIBUTION.md  DATA_ACCESS.md  README.md
data/eth1100_subset/: README.md
data/kintsugi/: ATTRIBUTION.md
data/loviisa/: DATASET.md
dev/: dialog_watchdog.ps1
dev/HotReloadLab/: HotLabComponent.cs  HotReloadLab.csproj  README.md
docs/: DEEP_REVIEW_2026-06-15.md  INSTALL.md  PERSONA_MAP.md  README.md  REVIEWER_SUMMARY.md  STONEPACK_THESIS.md  SUPERSESSION_MAP.md  architecture.html  data.js  deck.html  index.html  research.html  rockfaces_dataset.md  styles.css  wiki.html
docs/benchmarks/: CRA_COMPAS_PARITY.md  HOLE_PACKER_MATH_AND_BENCHMARK.md  LAMBDA_STUDY.md
docs/components/: ARCHITECTURE.md  COMPONENTS.md  DATA_STRUCTURE_AUDIT.md  ICON_LIBRARY.md  RESEARCH.md  TYPE_AUDIT_FACTS.md  WIKI_SOURCE_README.md  audit_types.py  components.json  connection_map.graphml  connection_map.mmd  connections.json  extract_components.py  make_icon_sheet.py  type_audit.json
docs/results/: RESULTS.md
docs/thesis/: 00_front.md  00_overview.md  90_originality.md  91_roadmap.md  99_references.md
examples/: GRASSHOPPER_BEST_PRACTICES.md  NEW_EXAMPLES_BUILD_SPEC.md  README.md  REGENERATION_RECIPE.md
examples/01_quarry_to_wall/: 01_quarry_to_wall.3dm  01_quarry_to_wall.gh
examples/02_masonry_assembly/: 02_masonry_assembly_color_order.3dm  02_masonry_assembly_color_order.gh
examples/03_gpr_fracture_granite/: README.md  granite_160_AU.gh  granite_160_VE.gh
examples/03_quarry_to_slabs/: 03_quarry_to_slabs_full.3dm  03_quarry_to_slabs_full.gh
examples/04_scan_to_bench_engineer/: 04_packable_volume.3dm  04_packable_volume_metrics.json  04_scan_to_bench.3dm  04_scan_to_bench.gh  11_granite_scan_to_bench.gh  README.md
examples/05_artist_pointing_machine/: 06_carving_stages.gh  README.md  stone_carving_simulation_LIGHT.gh
examples/07_scan_ingest_full/: 07_scan_ingest_full.gh  README.md
examples/08_gpr_marble/: 08_marble_block_layout.3dm  08_marble_cost_volume_metrics.json  README.md  STATISTICAL_REPORT.md  marble_600_grid1.gh  marble_600_grid2.gh  marble_600_grid3.gh
examples/09_uncertainty_safe_yield/: README.md  uncertainty_safe_yield.gh  uncertainty_safe_yield_result.3dm
examples/10_pack2d/: 10_pack2d_nfp_nest.gh  10_pack2d_result.3dm  10_pack2d_v506_nest.gh  README.md
examples/11_pack3d/: 11_pack3d_block_pack.gh  11_pack3d_result.3dm  README.md
examples/12_trencadis/: 12_trencadis_catalog.gh  12_trencadis_result.3dm  README.md
examples/13_surface_mapping/: 13_surface_result.3dm  13_surface_segment.gh  README.md
examples/14_kintsugi/: 14_kintsugi_bb_parity.gh  14_kintsugi_escalation_rescue.gh  14_kintsugi_facet_reassembly.gh  14_kintsugi_fantastic_breaks_bench.gh  14_kintsugi_result.3dm  14_kintsugi_rims_facets_bench.gh  14_kintsugi_synthetic.gh  14_kintsugi_synthetic_result.3dm  README.md
examples/15_statue_to_blocks/: 15A_evolvedfit.3dm  15A_evolvedfit_metrics.json  15A_pack_metrics.json  15B_match_metrics.json  15B_match_metrics_natural.json  15B_multibin.3dm  15B_multibin_metrics.json  15C_coacd_blocks.3dm  15C_coacd_demo.gh  15C_coacd_metrics.json  15C_multibin.3dm  15C_multibin_metrics.json  15_blocks.3dm  15_blocks_metrics.json  PLAN.md  README.md  match_rubble.py
examples/16_rubble_masonry/: 16_rubble_metrics.json  16_rubble_wall.3dm  16_rubble_wall.gh  README.md
examples/17_ashlar_masonry/: 17_ashlar_metrics.json  17_ashlar_wall.3dm  17_ashlar_wall.gh  README.md
examples/18_pack_settle_bullet/: 18_pack_settle_bullet.3dm  18_pack_settle_bullet.gh  18_settle_metrics.json  README.md
examples/19_rubble_evolved_fit_demo/: 19_evolved_fit_metrics.json  19_rubble_evolved_fit.3dm  19_rubble_evolved_fit.gh  README.md
examples/20_rubble_multibin_demo/: 20_multibin_metrics.json  20_rubble_multibin.3dm  20_rubble_multibin.gh  (+1 more)
frahan_proofs/: FrahanProofs.lean  README.md  lake-manifest.json  lakefile.toml
handoffs/: AGENT_ONBOARDING.md  CHECKPOINT_LOG.jsonl  COWORK_VS_CLAUDECODE_PLAN.md  EXAMPLES_PUNCHLIST_2026-06-07.md  HANDOFF_06_DISCONTINUITY_INGEST_AND_CARD.md  HANDOFF_2026-06-06_rubblepack_ingest.md  HANDOFF_2026-06-07_marble_cost_volume_georeferencing.md  HANDOFF_2026-06-07_polygonal_masonry_evolution.md  HANDOFF_2026-06-18_quarry_cladding_slabtrim.md  HANDOFF_2026-07-05.md  HANDOFF_2026-07-05_canonical_components.md  HANDOFF_2026-07-05_zenodo_release.md  HANDOFF_2026-07-06_math_program.md  HANDOFF_2026-07-07.md  HANDOFF_2026-07-07_examples_validation.md  HANDOFF_2026-07-07_stale_image_recapture.md  HANDOFF_2026-07-10_icp_examples_session.md  HANDOFF_2026-07-11_fracture_generator.md  HANDOFF_2026-07-12_kintsugi_n3_async_realscan.md  HANDOFF_2026-07-12b_trimmed_lane_breakcurve.md  HANDOFF_2026-07-13_deep_example_audit_HITL.md  HANDOFF_2026-07-13_uncommitted_audit.md  HANDOFF_LATEST.md  HUMAN_ONBOARDING.md  KNOWN_BUGS.md  LIVE_EXAMPLE_BUILD_HANDOFF.md  MIGRATION_GAP_TODO.md  POLYGONAL_MASONRY_EVOLUTION_TODO.md  RESTART_HANDOFF.md  example_audit_2026-07-13.txt
install/: INSTALL.md  build_yak.ps1  deploy.ps1  deploy.sh  stage.ps1  yak_manifest.yml
lean/: FrahanProofs.lean  README.md  lakefile.toml
native/: README.md
native/cgal_shim/: BUILD.md  CMakeLists.txt  build_native.ps1  build_native.sh  frahan_cgal.cpp  frahan_cgal.h
native/coacd_shim/: BUILD.md  CMakeLists.txt  build_native.ps1  build_native.sh  frahan_coacd.cpp  frahan_coacd.h
native/coacd_shim/cmake/: Config.cmake.in
native/geogram_shim/: BUILD.md  CMakeLists.txt  build_native.ps1  build_native.sh  frahan_geogram.cpp  frahan_geogram.h
native/osqp_shim/: CMakeLists.txt  frahan_osqp.cpp  frahan_osqp.h
research/: MATH_DERIVATIONS.md  slab_trim_greedy_convex_hull.md
tools/: append_hover_citations.py
web/: README.md
wiki/: index.md  log.md
(+1308 files in other folders)
